--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: HarmonyOS;
+    src: url("font/HarmonyOS_Sans_SC_Regular.ttf");
+}
+
+body {
+    font-family: HarmonyOS;
+}
+
 .title {
     height: 80px;
     background-color: blue;
