--- a/css/writingdetails.css
+++ b/css/writingdetails.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: HarmonyOS;
+    src: url("font/HarmonyOS_Sans_SC_Regular.ttf");
+}
+
+body {
+    font-family: HarmonyOS;
+}
+
 .hang {
     display: flex;
     height: 300px;
