--- a/videowebsite/css/playlist.css
+++ b/videowebsite/css/playlist.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: HarmonyOS;
+    src: url("font/HarmonyOS_Sans_SC_Regular.ttf");
+}
+
+body {
+    font-family: HarmonyOS;
+}
+
 body {
     overflow: scroll;
 }
